scheds: introduce scx_fair
Introduce scx_fair, a scheduler that focuses on ensuring fairness among
tasks.

The ideal use case for this scheduler is with workloads that prioritize
throughput over responsiveness, such as in server environments.

Signed-off-by: Andrea Righi <andrea.righi@linux.dev>

--- a/meson-scripts/stress_tests.ini
+++ b/meson-scripts/stress_tests.ini
@@ -22,6 +22,12 @@ sched_args:
 stress_cmd: stress-ng -t 14 --aggressive -M -c `nproc` -f `nproc`
 timeout_sec: 15
 
+[scx_fair]
+sched: scx_fair
+sched_args:
+stress_cmd: stress-ng -t 14 --aggressive -M -c `nproc` -f `nproc`
+timeout_sec: 15
+
 [scx_layered]
 sched: scx_layered
 sched_args: --run-example -v --stats 1
